# fanctl

./: .gitlab-ci.yml  Cargo.toml  README.md  fanctl-nv.yml  fanctl.yml  shell.nix
src/: clap_ext.rs  config.rs  hwmon.rs  logging.rs  main.rs  metrics.rs  nvidia.rs  path_ext.rs  rules.rs  traits.rs
src/config/: error.rs  mod.rs  nvidia.rs  rules.rs
src/hwmon/: amdgpu.rs  mod.rs  pwm.rs  sensor.rs  util.rs
src/nvidia/: mod.rs
tests/: empty.rs
