[package]
name = "fanctl"
version = "0.6.4"
authors = ["Matt Coffin <mcoffin13@gmail.com>", "K. <kayo@illumium.org>"]
edition = "2024"
license = "GPL-3.0"
description = "Fancontrol replacement in Rust with YAML configuration"
documentation = "https://docs.rs/fanctl"
homepage = "https://gitlab.com/mcoffin/fanctl"
repository = "https://gitlab.com/mcoffin/fanctl"
exclude = ["fanctl.yml", ".gitlab-ci.yml"]
keywords = ["fancontrol", "fan", "sysfs", "hwmon"]

[dependencies]
splines = "5"
env_logger = "0.11"
log = "0.4"
signal-hook = "0.4"
regex = "1"
thiserror = "2"

[dependencies.clap]
version = "4"
features = ["derive", "cargo"]

[dependencies.serde_yaml]
package = "yaml_serde"
version = "0.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3"
optional = true

[dependencies.nvml]
package = "nvml-wrapper"
version = "0.12"
optional = true

[features]
default = ["color", "nvidia"]
color = ["clap/color"]
nvidia = ["serde_with", "nvml"]
